--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "if-env TYPE=server && (cd server && npm install) || (cd client && npm install)",
     "server": "node ./server/src/server.js",
-    "client": "cd client && npm start"
+    "client": "cd client && npm run dev"
   },
   "dependencies": {
     "init": "^0.1.2"
