--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "init": "^0.1.2",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "uuid": "^11.1.0"
   },
   "scripts": {
     "start": "node src/server.js",
