Unit Test for Register User
Created unit tests for /api/auth/register endpoint, using Jest and Supertest.

--- a/server/package.json
+++ b/server/package.json
@@ -14,10 +14,17 @@
     "dev": "nodemon src/server.js",
     "db:migrate": "npx prisma migrate dev",
     "db:generate": "npx prisma generate",
-    "db:studio": "npx prisma studio"
+    "db:studio": "npx prisma studio",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:verbose": "jest --verbose"
   },
   "devDependencies": {
+    "@types/jest": "^30.0.0",
+    "jest": "^29.7.0",
     "nodemon": "^3.1.10",
-    "prisma": "^6.10.1"
+    "prisma": "^6.10.1",
+    "supertest": "^7.1.1"
   }
 }
